Code and unit test fixes.