@@ -14,7 +14,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static pipelite.service.PipeliteExecutorService.createExecutorService;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.Duration;
 import java.time.ZonedDateTime;
 import java.util.concurrent.ExecutorService;
@@ -51,51 +50,16 @@ public class SshCmdRunnerTest {
   }
 
   @Test
-  public void writeFileAndReadFile() {
-    SshCmdRunner cmdRunner = cmdRunner();
-    String str = "test";
-
-    // Create file in temp dir
-    String fileName = PipeliteIdCreator.id();
-    Path file = Paths.get("pipelite", fileName);
-    assertThat(cmdRunner.fileExists(file)).isFalse();
-    cmdRunner.createDir(Paths.get("pipelite"));
-    cmdRunner.createFile(file);
-    assertThat(cmdRunner.fileExists(file)).isTrue();
-
-    // Write file
-    cmdRunner.writeFile(str, file);
-
-    // Read file
-    assertThat(cmdRunner.readFile(file, 10)).isEqualTo("test");
-  }
-
-  @Test
-  public void createFileAndFileExistsAndDeleteFile() {
+  public void createTempFileAndFileExistsAndDeleteFile() {
     SshCmdRunner cmdRunner = cmdRunner();
 
     // Create file in temp dir
-    String fileName = PipeliteIdCreator.id();
-    Path file = Paths.get(TMP_DIR, fileName);
-    assertThat(cmdRunner.fileExists(file)).isFalse();
-    cmdRunner.createFile(file);
-    assertThat(cmdRunner.fileExists(file)).isTrue();
+    String tempFile = cmdRunner.createTempFile();
+    assertThat(cmdRunner.fileExists(Path.of(tempFile))).isTrue();
 
     // Delete file
-    cmdRunner.deleteFile(file);
-    assertThat(cmdRunner.fileExists(file)).isFalse();
-  }
-
-  @Test
-  public void createDirAndDirExists() {
-    SshCmdRunner cmdRunner = cmdRunner();
-
-    // Create directory in temp dir
-    String dirName = PipeliteIdCreator.id();
-    Path dir = Paths.get(TMP_DIR, dirName);
-    assertThat(cmdRunner.dirExists(dir)).isFalse();
-    cmdRunner.createDir(dir);
-    assertThat(cmdRunner.dirExists(dir)).isTrue();
+    cmdRunner.deleteFile(Path.of(tempFile));
+    assertThat(cmdRunner.fileExists(Path.of(tempFile))).isFalse();
   }
 
   @Test
